# plugin-x

./: CMakeLists.txt  README.md
GameBase/: build.gradle  consumer-rules.pro
GameBase/src/main/: AndroidManifest.xml
GameBase/src/main/java/com/game/core/: Constants.java  ScriptCallJavaBridge.java
GameBase/src/main/java/com/game/core/base/: BaseActivity.java  BaseApp.java  SDKComponent.java  TaskExecutor.java
GameBase/src/main/java/com/game/core/component/: AdWrapper.java  AdsWrapper.java  AnalyticsWrapper.java  Component.java  IAPWrapper.java  InterfaceAd.java  InterfaceAds.java  JumpOtherApk.java  NavigateToApp.java  NetWorkState.java  NetworkStatus.java  Permission.java  PermissionComponent.java  PluginError.java  PluginWrapper.java  SDKWrapperComp.java  ShareWrapper.java  UserWrapper.java
GameBase/src/main/java/com/game/core/utils/: Function.java  NotificationCenter.java  ObserverListener.java
GameBase@v2/: build.gradle
GameBase@v2/src/main/: AndroidManifest.xml
GameBase@v2/src/main/java/com/game/core/: Constants.java
GameBase@v2/src/main/java/com/game/core/base/: BaseActivity.java  BaseApp.java
GameBase@v2/src/main/java/com/game/core/component/: AnalyticsWrapper.java  NavigateToApp.java  NetworkStatus.java
GameBase@v2/src/main/java/com/game/core/utils/: NotificationCenter.java  ObserverListener.java
GameBase@v2/src/main/res/values/: strings.xml
js-bindings/: js-pluginx.cpp  js-pluginx.h
libFacebookLogin/: AndroidManifest.xml  consumer-rules.pro
libFacebookLogin/res/values/: strings.xml
libFacebookLogin/src/main/java/com/game/plugin/user/: FacebookLogin.java
libFacebookShare/: AndroidManifest.xml  build.gradle  proguard-rules.pro
libFacebookShare/src/main/java/com/game/plugin/share/: FacebookShare.java
libFlurryAnalytics/: AndroidManifest.xml  build.gradle
libFlurryAnalytics/src/main/java/com/game/flurry/: FlurryAnalytics.java  FlurryApp.java
libGoogleAnalytics/: AndroidManifest.xml  build.gradle  google-services.json  proguard-rules.pro
libGoogleAnalytics/src/main/java/com/game/firebase/: GoogleAnalytics.java
libGoogleMobAd/: AndroidManifest.xml  build.gradle  consumer-rules.pro  proguard-rules.pro
libGoogleMobAd/src/main/java/com/game/googleMobAd/: GoogleMobAd.java
libGooglePay/: AndroidManifest.xml  build.gradle  proguard-rules.pro
libGooglePay/src/main/java/com/game/googlePay/: GooglePay.java  Security.java
libVungleAd/: consumer-rules.pro
libVungleAd/src/main/java/com/game/vungleAd/: VungleAd.java
luabindings/: lua-pluginx.cpp  lua-pluginx.h
plugins/FacebookLogin/: AndroidManifest.xml  build.gradle  consumer-rules.pro  proguard-rules.pro
plugins/FacebookLogin/src/main/java/com/game/plugin/user/: FacebookLogin.java
plugins/FacebookLogin/src/main/java/com/pluginx/facebook/login/: FacebookLogin.java
plugins/FacebookShare/: AndroidManifest.xml  build.gradle  consumer-rules.pro  proguard-rules.pro
plugins/FacebookShare/src/main/java/com/pluginx/facebook/share/: FacebookShare.java
plugins/FlurryAnalytics/: AndroidManifest.xml  build.gradle  proguard-rules.pro
plugins/FlurryAnalytics/src/main/java/com/pluginx/flurry/analytics/: FlurryAnalytics.java  FlurryApp.java
plugins/GoogleAnalytics/: AndroidManifest.xml  build.gradle  consumer-rules.pro  proguard-rules.pro
plugins/GoogleAnalytics/src/main/java/com/pluginx/google/analytics/: GoogleAnalytics.java
plugins/GoogleLogin/: AndroidManifest.xml  build.gradle  consumer-rules.pro  proguard-rules.pro
plugins/GoogleLogin/src/main/java/com/game/plugin/user/: GoogleLogin.java
plugins/GoogleLogin/src/main/java/com/pluginx/google/login/: GoogleLogin.java
plugins/GoogleMobAd/: AndroidManifest.xml  build.gradle  consumer-rules.pro  proguard-rules.pro
plugins/GoogleMobAd/src/main/java/com/pluginx/google/ads/: GoogleMobAd.java
plugins/GoogleMobAd/src/main/java/com/pluginx/plugin/googleMobAd/: GoogleMobAd.java
plugins/GooglePay/: AndroidManifest.xml  build.gradle  consumer-rules.pro  proguard-rules.pro
plugins/GooglePay/src/main/java/com/pluginx/google/pay/: GooglePay.java
plugins/VungleAd/: AndroidManifest.xml  build.gradle  consumer-rules.pro  local.properties  proguard-rules.pro
plugins/VungleAd/src/main/java/com/pluginx/vungle/ads/: VungleAd.java
protocols/include/: PluginHelper.h  PluginMacros.h  PluginMgr.h  ProtocolShare.h  ProtocolUser.h
protocols/platform/android/: EventManager.h  JniUtil.cpp  PluginHelper.cpp  SDKComponentHelper.cpp  SDKComponentHelper.h  SDKEventManager.h
protocols/platform/android-2dx/: JniUtil.cpp  JniUtil.h  PluginHelper.cpp  PluginHelper.h  ProtocolShare.cpp  ProtocolUser.cpp
protocols/proj.android/: build.gradle  consumer-rules.pro  proguard-rules.pro
protocols/proj.android/src/main/: AndroidManifest.xml
protocols/proj.android/src/main/java/com/game/core/base/: SDKComponent.java
protocols/proj.android/src/main/java/com/game/core/component/: AnalyticsWrapper.java  AppComponent.java  Permissions.java  PhotoComponent.java  ShareWrapper.java  UserWrapper.java
protocols/proj.android/src/main/java/com/game/core/utils/: Function.java
protocols/proj.android/src/main/java/com/pluginx/core/: Constants.java  ScriptCallJavaBridge.java
protocols/proj.android/src/main/java/com/pluginx/core/base/: BaseApp.java  FunctionHelper.java  SDKComponent.java  TaskExecutor.java
protocols/proj.android/src/main/java/com/pluginx/core/component/: AdsWrapper.java  AnalyticsWrapper.java  AppComponent.java  Component.java  IAPWrapper.java  NavigateToApp.java  NetworkStatus.java  Permissions.java  PhotoComponent.java  PluginError.java  PluginResult.java  PluginWrapper.java  ShareWrapper.java  UserWrapper.java
protocols/proj.android/src/main/java/com/pluginx/core/json/: EnumTypeAdapter.java
protocols/proj.android/src/main/java/com/pluginx/core/utils/: Function.java  NotificationCenter.java  ObserverListener.java
